@@ -64,17 +64,25 @@ The command can include arguments."
     ("^\\*\\*\\* Exception: \\(.+?\\):(\\([0-9]+\\),\\([0-9]+\\))-(\\([0-9]+\\),\\([0-9]+\\)): .*"
      1 ,@(if (fboundp 'compilation-fake-loc) '((2 . 4) (3 . 5)) '(2 3)))
     ;; GHCi uses two different forms for line/col ranges, depending on
-    ;; whether it's all on the same line or not :-(
+    ;; whether it's all on the same line or not :-( In Emacs-23, I could use
+    ;; explicitly numbered subgroups to merge the two patterns.
     ("^\\*\\*\\* Exception: \\(.+?\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\): .*"
      1 2 ,(if (fboundp 'compilation-fake-loc) '(3 . 4) 3))
     ;; Info messages.  Not errors per se.
-    ,@(if (fboundp 'compilation-fake-loc)
-          `(;; Another GHCi pattern used in type errors.
-            ("^[ \t]+at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\)$"
-             1 2 (3 . 4) 0)
-            ;; Info xrefs.
-            (,inferior-haskell-info-xref-re
-             1 2 3 0))))
+    ,@(when (fboundp 'compilation-fake-loc)
+        `(;; Other GHCi patterns used in type errors.
+          ("^[ \t]+at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\)$"
+           1 2 (3 . 4) 0)
+          ;; Foo.hs:318:80:
+          ;;     Ambiguous occurrence `Bar'
+          ;;     It could refer to either `Bar', defined at Zork.hs:311:5
+          ;; 		          or `Bar', imported from Bars at Frob.hs:32:0-16
+          ;; 				       (defined at Location.hs:97:5)
+          ("[ (]defined at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\))?$" 1 2 3 0)
+          ("imported from .* at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\)$"
+           1 2 (3 . 4) 0)
+          ;; Info xrefs.
+          (,inferior-haskell-info-xref-re 1 2 3 0))))
   "Regexps for error messages generated by inferior Haskell processes.
 The format should be the same as for `compilation-error-regexp-alist'.")
 
